Version 4.0-0

 o Moved data sets to the carData package.
 
 o Introduced predictor effects.
 
 o Reorganized complex arguments to  plot() and Effect() into lists; legacy arguments retained as alternatives.
 
 o Use lattice theme for plot defaults.
 
 o Improve generation of default values for numeric predictors.

Version 3.1-3

 o Fixed bug in using multiline=TRUE with effects with 4 or more terms

 o Fixed a bug in Effect.clmm, Effect.mer, and Effect.lme that caused failure with a data.frame named m

 o Fixed bug in Effect.clmm and Effect.clmm2

 o Improved stability of handling linear and generalized linear mixed effects models from lme4 and nlme

 o Fixed bug in plot.eff() affecting multiline displays with four or more predictors in the effect.

 o Fixed warnings (new in R 3.4.0) produced by use of 1 x 1 arrays in computing SEs of effects for multinom and polr model (problem reported by Stefan Th. Gries).

Version 3.1-2

 o Fixed bug handling 'start' argument in glmm's.  Reported by Mariano Devoto; fix by Ben Bolker

 o Modified internal function make.ticks() so that it doesn't fail due to floating-point inaccuracy (following error reported by Joe Clayton Ford).

 o Check formula for presence of factor(), etc. (suggestion of Ulrike Gromping).

 o Fixed bug in Effect.clm() and some other methods (reported by David Barron), which didn't pass ... argument.

 o A warning is now printed if partial residuals are requested in a multiline plot.

 o Corrected plotting of partial residuals with various scalings of the y-axis and x-axis.

 o Added show.strip.values argument to plot.eff() and plot.effpoly().

Version 3.1-1

 o Requires R >= 3.2.0 (requested by CRAN).

Version 3.1-0

 o Corrected and improved computation of partial residuals, fixing bug introduced by bug fix in 3.0-7.

Version 3.0-7

 o Extends to logistic ordinal response models fit using 'clm' and 'clmm' in the 'ordinal package.
