@@ -1,6 +1,6 @@
 Package: effects
 Version: 4.0-0
-Date: 2017-09-05
+Date: 2017-09-08
 Title: Effect Displays for Linear, Generalized Linear, and Other Models
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
@@ -11,7 +11,7 @@ Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaste
     person("Steve", "Taylor", role = "ctb"))
 Depends: R (>= 3.2.0), carData
 Suggests: pbkrtest (>= 0.4-4), nlme, MASS, poLCA, heplots, splines, ordinal, car
-Imports: lme4, nnet, lattice, grid, colorspace, graphics, grDevices, stats, utils
+Imports: lme4, nnet, lattice, grid, colorspace, graphics, grDevices, stats, survey, utils
 LazyLoad: yes
 LazyData: yes
 Description: 
